<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_newsfeed"
        android:enabled="true"
        android:icon="@drawable/ic_search_nav"
        android:title="@string/bottom_menu_newsfeed"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_network"
        android:enabled="true"
        android:icon="@drawable/ic_groups"
        android:title="@string/bottom_menu_network"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_message"
        android:enabled="true"
        android:icon="@drawable/ic_mail"
        android:title="@string/bottom_menu_message"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_profile"
        android:title="@string/bottom_menu_profile"
        app:showAsAction="ifRoom" />
</menu>