<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_newsfeed_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="id.pazpo.agent.activities.CreateSearchActivity"
    tools:showIn="@layout/appbar_newsfeed_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:background="@drawable/card_border"
            android:weightSum="1"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <TextView
                android:id="@+id/tv_newsfeed_form_wtb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/tv_yellow_border_background"
                android:text="@string/content_wtb"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
<!--            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.2"
                android:background="@color/grey"/>-->
            <TextView
                android:id="@+id/tv_newsfeed_form_wts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/content_wts"
                android:textSize="16sp"
                android:textColor="@color/grey"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:background="@drawable/card_border"
            android:weightSum="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone">
            <TextView
                android:id="@+id/tv_newsfeed_form_wtr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/content_wtr"
                android:textSize="16sp"
                android:textColor="@color/grey"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:alpha="0.2"
                android:background="@color/grey"/>
            <TextView
                android:id="@+id/tv_newsfeed_form_wtl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/content_wtl"
                android:textSize="16sp"
                android:textColor="@color/grey"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/sp_newsfeed_form_proptype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:spinnerMode="dropdown"
            android:entries="@array/dummy">
        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="1dp"
                android:alpha="0.2"
                android:background="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="center_horizontal"
                android:text="@string/content_location"
                android:textAllCaps="true"
                android:textSize="12sp"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="1dp"
                android:alpha="0.2"
                android:background="@color/black"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/sp_newsfeed_form_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:spinnerMode="dropdown"
            android:entries="@array/dummy">
        </Spinner>

        <Spinner
            android:id="@+id/sp_newsfeed_form_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:spinnerMode="dropdown"
            android:entries="@array/dummy">
        </Spinner>

        <Spinner
            android:id="@+id/sp_newsfeed_form_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:spinnerMode="dropdown"
            android:entries="@array/dummy">
        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:gravity="center_vertical">
            <View
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="1dp"
                android:alpha="0.2"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/tv_newsfeed_form_label_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="center_horizontal"
                android:text="@string/content_budget"
                android:textAllCaps="true"
                android:textSize="12sp"/>
            <View
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="1dp"
                android:alpha="0.2"
                android:background="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_border"
            android:layout_marginBottom="15dp"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:maxLines="1"
                android:visibility="gone">

                <EditText
                    android:id="@+id/et_newsfeed_form_price_min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:hint="@string/content_hint_min"
                    android:nextFocusUp="@+id/et_create_search_max_budget"
                    android:nextFocusLeft="@+id/et_create_search_max_budget"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:maxLines="1">

                <EditText
                    android:id="@+id/et_newsfeed_form_price_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:hint="@string/content_hint_price"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:visibility="gone">

                <EditText
                    android:id="@+id/et_newsfeed_form_fee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="15sp"
                    android:maxLength="5"
                    android:hint="@string/content_hint_fee"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_border"
            android:layout_marginBottom="15dp"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4">

                <EditText
                    android:id="@+id/et_newsfeed_form_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:hint="@string/content_hint_notes"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLength="255"
                    android:lines="4"
                    android:maxLines="4"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_newsfeed_form_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:background="@color/colorAccent"/>

            <Button
                android:id="@+id/btn_newsfeed_form_save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/button_search"
                android:background="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
